unpackaged/main/default/objects/Skill_User__c/Skill_User__c.object-meta.xml
<CustomObject>
    <label>Skill User</label>
    <nameField>
        <displayFormat>SU - {00000000}</displayFormat>
        <label>Skill User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>