unpackaged/main/default/objects/Skill_User__c/fields/My_Skills__c.field-meta.xml
<CustomField>
    <fullName>My_Skills__c</fullName>
    <formula>IF( User__r.Id =  $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for List Views and Reports</inlineHelpText>
    <label>My Skills</label>
    <type>Checkbox</type>
</CustomField>