unpackaged/main/default/objects/Skill_User__c/fields/Skill_Detail__c.field-meta.xml
<CustomField>
    <fullName>Skill_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Detail</label>
    <referenceTo>Skill_Detail__c</referenceTo>
    <relationshipLabel>Skills Users</relationshipLabel>
    <relationshipName>Skills_Users</relationshipName>
    <type>Lookup</type>
</CustomField>