unpackaged/main/default/objects/Skill_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Skill_Detail__c</columns>
    <columns>Skill_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>