unpackaged/main/default/objects/Skill_User__c/listViews/My_Skills.listView-meta.xml
<ListView>
    <fullName>My_Skills</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Skill_Detail__c</columns>
    <columns>Skill_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Skills__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Skills</label>
    <sharedTo>
        <group>System_Admin</group>
        <group>Tech_Support_Users</group>
    </sharedTo>
</ListView>